# ChangeLog for app-accessibility/speakup
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup/ChangeLog,v 1.24 2009/06/03 02:33:04 williamh Exp $

*speakup-3.0.5 (03 Jun 2009)

  03 Jun 2009; William Hubbs <williamh@gentoo.org> -speakup-3.0.4.ebuild,
  +speakup-3.0.5.ebuild:
  Version bump and removed 3.0.4 since it was buggy.

  31 May 2009; William Hubbs <williamh@gentoo.org> speakup-3.0.4.ebuild:
  Corrected the src_uri.

*speakup-3.0.4 (31 May 2009)

  31 May 2009; William Hubbs <williamh@gentoo.org> +speakup-3.0.4.ebuild:
  Version bump.

  26 May 2009; William Hubbs <williamh@gentoo.org>
  speakup-3.0.3_p200904041142.ebuild:
  fixed typos.

  22 Apr 2009; Markus Meier <maekke@gentoo.org> speakup-3.0.3_p200904041142:
  amd64 stable, bug #263741

  09 Apr 2009; William Hubbs <williamh@gentoo.org>
  -speakup-3.0.3_p200902221539.ebuild:
  Removed old version.

  09 Apr 2009; William Hubbs <williamh@gentoo.org>
  speakup-3.0.3_p200904041142.ebuild:
  Stable on x86. I am expediting this because the previous snapshot had a
  bug (upstream) that would lock up some systems.

*speakup-3.0.3_p200904041142 (05 Apr 2009)

  05 Apr 2009; William Hubbs <williamh@gentoo.org>
  +speakup-3.0.3_p200904041142.ebuild:
  New snapshot.

  01 Apr 2009; William Hubbs <williamh@gentoo.org>
  speakup-3.0.3_p200902221539.ebuild:
  Marked stable x86.

  22 Feb 2009; William Hubbs <williamh@gentoo.org>
  -speakup-3.0.3_p20080802.ebuild:
  Removed old snapshot.

*speakup-3.0.3_p200902221539 (22 Feb 2009)

  22 Feb 2009; William Hubbs <williamh@gentoo.org>
  +speakup-3.0.3_p200902221539.ebuild:
  New snapshot.

  09 Nov 2008; William Hubbs <williamh@gentoo.org>
  speakup-3.0.3_p20080802.ebuild:
  Fixed the way the kernel version is recognized for bug #245607.

*speakup-3.0.3_p20080802 (02 Aug 2008)

  02 Aug 2008; William Hubbs <williamh@gentoo.org>