@@ -1,6 +1,8 @@
 DIST speakup-3.0.3_p200904041142.tar.bz2 113649 RMD160 832ba57c4208b5325dc07ae27e84fda0df058339 SHA1 875e75326143807b12aa14da7f5f112af49fcd9d SHA256 c6b43017ec5a9169677166675409d60fa316dad4912abd3a9d0019b70f26c5b4
 DIST speakup-3.0.5.tar.bz2 122158 RMD160 4a56ffbd6baada0dea3020503f34378a444bc6a4 SHA1 fccef8aca8041ac9ee8c79cdd1c8077dad13861f SHA256 ff22aa5072e124b4640d722831bd0b665679e2d3d7b2c6591f44f560cef57269
+DIST speakup-3.1.1.tar.bz2 109299 RMD160 e38066e71fdb58f6be42d7bd90847221e2a4a65b SHA1 4c436e57872abd9de7ccca92bfb73ba8c215a4b3 SHA256 dce60d8157678ae88feb6923c270bdd918a67c512ef1b23c26f1a24e88d92eb4
 EBUILD speakup-3.0.3_p200904041142.ebuild 1936 RMD160 a5a9e22d673ed8f7900ef8e1e89603c110b4c8cd SHA1 0816c7486f437ea444fda58963bd4e7d40c69888 SHA256 d83b424ef79b8588915a3a7b3b74a0ee64b01d4b313b35a0fd880479e7ac41dc
 EBUILD speakup-3.0.5.ebuild 1916 RMD160 ee7a0898772594b98c75094e8aa85761a619f1ec SHA1 6c3501063fa8ba64f12b3df169345ce01da5a049 SHA256 beded18936db0f49377c3dc7ebc55f5213d4bb9bec04758f0fabadcb33b18820
-MISC ChangeLog 3998 RMD160 88ac040cc1d5e076d4b69128392f92424646ccb8 SHA1 d7111a2bb04c5f327d118aaadc0b574a52bc12c6 SHA256 0df66b18a79a4231046d472373aae5715ebb0e8a6cb069b65f6dd5261683e0e9
+EBUILD speakup-3.1.1.ebuild 1997 RMD160 6e09f12440829807f7e88e1d6096175cb9cef1f5 SHA1 aa6d994565f9a7058249db6f86a49223af233054 SHA256 6a507ec81685a00c9f54131d39566e3a1ddb4e3b6aa2b9acdae5c300cb255c08
+MISC ChangeLog 4119 RMD160 f6db2ffc0273e73932616ef57bfb6d220fa8d883 SHA1 901e55ab6f30d108270c15c5fdee3c039a1eed5d SHA256 2a442de91b8f6b1b02dfe7bd75f95b20aa7424e0d448e4a84662a362972a6932
 MISC metadata.xml 230 RMD160 2f69bbb1338b564354bb895c23828b25dd6050f1 SHA1 971705d47037906acf05a776c5980e93015ee341 SHA256 2993434ffac605ed23d3a091ed057e21d1c2460d5768ddfda5c38dfb3a6c688c
