@@ -1,6 +1,11 @@
 # ChangeLog for app-accessibility/speakup
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup/ChangeLog,v 1.24 2009/06/03 02:33:04 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-accessibility/speakup/ChangeLog,v 1.25 2009/06/20 07:03:49 williamh Exp $
+
+*speakup-3.1.1 (20 Jun 2009)
+
+  20 Jun 2009; William Hubbs <williamh@gentoo.org> +speakup-3.1.1.ebuild:
+  Version bump.
 
 *speakup-3.0.5 (03 Jun 2009)
 
